Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39217

Animated image loaded from network produces warnings

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.3.2
    • 5.1.1, 5.2.1, 5.3.0
    • None
    • Windows 7, msvc2010, x86, ANGLE

      Using animated image with source file located on network produces warnings:

      QIODevice::seek: Cannot call seek on a sequential device
      

      To reproduce, place animation.gif on a HTTP server and replace mysite.com with proper address.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            krnekit Nikita Krupenko
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes